k/05/demos/config/nginxhello.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxhello
  labels:
    app.kubernetes.io/name: nginxhello
    app.kubernetes.io/part-of: nginxhello
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginxhello
      app.kubernetes.io/part-of: nginxhello
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginxhello
        app.kubernetes.io/part-of: nginxhello
    spec:
      containers:
        - name: nginxhello
          image: nbrown/nginxhello:mainline
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginxhello
  labels:
    app.kubernetes.io/name: nginxhello
    app.kubernetes.io/part-of: nginxhello
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app.kubernetes.io/name: nginxhello
    app.kubernetes.io/part-of: nginxhello
