k/05/demos/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxhello-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # Replace the value of the host field to reflect your situation.
    - host: 172-18-255-200.nip.io
      http:
        paths:
          - path: /
            backend:
              service:
                name: nginxhello
                port:
                  number: 80
            pathType: Exact
